Fix overlapping buttons on grat screen and improved usability for add button on mood screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,6 +159,9 @@
     .b_center {
       left: 41%;
     }
+    #btn1 {
+      margin-top: 15px;
+    }
     /*Renders icons correctly*/
     .fas option {
       font-weight: 900;
